--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-# Your requirements go here
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+google-auth==2.23.0
+google-auth-oauthlib==1.1.0
+gspread==5.11.2
+idna==3.4
+oauthlib==3.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pygame-ce==2.3.2
+pygame-gui==0.6.9
+python-i18n==0.3.9
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+urllib3==1.26.16
